# cfDNA_GWAS_generator

./: README.md  cfDNA_GWAS_generator.md  config.bam.example.yaml  config.fastq.example.yaml  generate_pipeline.py  pyproject.toml  samples.bam.example.tsv
examples/: config.bam.example.yaml  config.fastq.example.yaml  samples.fastq.example.tsv
src/cfdna_gwas_generator/: __init__.py  generator.py
